# abhinandhs.deno.dev

./: .gitignore  Cargo.toml  Trunk.toml  _build.rs  build.rs  deno.json  dev.tmux  index.html  input.css  justfile  main.ts
.github/workflows/: deploy.yml  test.yml
articles/published/: age-nvim.md  deno-fresh-to-yew-rs.md  hello-world.md  setting-up-newsboat-the-nix-way.md
assets/articles/: feed.atom.xml  feed.json  feed.xml
src/: lib.rs  main.rs  route.rs
src/articles/: generated.rs  mod.rs  post-02.md  post-03.md
src/components/: footer.rs  header.rs  mod.rs  theme.rs  toc.rs
src/pages/: about.rs  articles.rs  home.rs  mod.rs  movies.rs  portfolio.rs  post.rs
src/utils/: generated.rs  mod.rs
static/: feed.atom.xml  feed.json  feed.xml  input.css  output.css
static/movies/: batman.avif  bb.avif  bcs.avif  before_midnight.avif  before_sunrise.avif  before_sunset.avif  blade_runner.avif  breaking_bad.avif  crazy_stupid_love.avif  dare_devil.avif  daredevil.avif  daredevil_01.avif  demolition.avif  drive.avif  dune.avif  dunkirk.avif  dunkrik.avif  el_camino.avif  fall_guy.avif  fight_club.avif  five_feet_apart.avif  ironman.avif  jhon_wick.avif  jpg  la_la_land.avif  nightcrawler.avif  prisoners.avif  remember_me.avif  shutter_island.avif  stay.avif  stay_02.avif  stay_03.avif  the_shawshank_redemption.avif  top_gun.avif  walter_mitty.avif
