[package]
name = "my-site"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.22.0", features = ["ssr", "csr", "hydration"] }
yew-router = "0.19"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
pulldown-cmark = "0.13"
serde = { version = "1.0", features = ["derive"]}
chrono = "0.4"
gray_matter = "0.3.2"
walkdir = "2.5.0"
comrak = "0.50"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
serde_json = "1.0"

[dev-dependencies]

[dependencies.web-sys]
version = "0.3"
features = [
  "HtmlButtonElement",
  "HtmlElement",
  "Node",
  "Window",
  "Document",
  "DomTokenList",
  "Element",
  "Navigator",
  "Clipboard",
  "MouseEvent"
]

[profile.dev]
opt-level = 0 
debug = 0 
incremental = true

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O']  # or true/false

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = false
omit-default-module-path = false
split-linked-modules = false
